# app/Http/Controllers/SettingController.php
@@ -2,18 +2,13 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Resources\SiteSettingResource;
 use App\Models\SiteSetting;
-use Illuminate\Http\JsonResponse;
 
 class SettingController extends Controller
 {
-    public function index(): JsonResponse
+    public function index(): SiteSettingResource
     {
-        return response()->json([
-            'data' => [
-                'hero_image' => SiteSetting::get(SiteSetting::KEY_HERO_IMAGE),
-                'maps_query' => SiteSetting::get(SiteSetting::KEY_MAPS_QUERY),
-            ],
-        ]);
+        return new SiteSettingResource(SiteSetting::payload());
     }
 }
