# app/Http/Requests/Setting/UpdateContactRequest.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Http\Requests\Setting;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateContactRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'address' => ['sometimes', 'nullable', 'string', 'max:255'],
+            'phone' => ['sometimes', 'nullable', 'string', 'max:20', 'regex:/^[0-9+\-\s()]+$/'],
+            'email' => ['sometimes', 'nullable', 'string', 'email', 'max:255'],
+            'hours' => ['sometimes', 'nullable', 'string', 'max:120'],
+        ];
+    }
+}
